--- a/src/main/resources/com/groupthree/mancala/start-screen-view.fxml
+++ b/src/main/resources/com/groupthree/mancala/start-screen-view.fxml
@@ -1,22 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.groupthree.mancala.controllers.StartController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="applicationName">
-        Mancala
-    </Label>
-    <Label fx:id="groupName">
-        Group 3
-    </Label>
-    <Button text="Login" onAction="#onLoginButtonClick"/>
-    <Button text="Sign Up" onAction="#onSignUpButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.groupthree.mancala.WelcomeTwoController">
+   <children>
+      <Label alignment="CENTER" layoutX="225.0" layoutY="35.0" prefHeight="53.0" prefWidth="150.0" text="Mancala" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold Italic" size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="257.0" layoutY="88.0" text="Group 3">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Group layoutX="218.0" layoutY="208.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#login" text="Login">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button layoutX="80.0" mnemonicParsing="false" onAction="#register" text="Signup">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+         </children>
+      </Group>
+   </children>
+</AnchorPane>
