--- a/src/main/resources/com/groupthree/mancala/player-dashboard-view.fxml
+++ b/src/main/resources/com/groupthree/mancala/player-dashboard-view.fxml
@@ -1,17 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.groupthree.mancala.controllers.PlayerDashboardController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-    <Button text="New Game" onAction="#onNewGameButtonClick"/>
-    <Button text="Profile" onAction="#onProfileButtonClick"/>
-    <Button text="Leaderboard" onAction="#onLeaderboardButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.groupthree.mancala.PlayerDashboardController">
+   <children>
+      <Label fx:id="welcomeText" layoutX="182.0" layoutY="37.0" text="Welcome Playername ">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Group layoutX="182.0" layoutY="160.0">
+         <children>
+            <MenuButton layoutX="131.0" mnemonicParsing="false" onAction="#onNewGameButtonClick" text="Game Mode">
+              <items>
+                <MenuItem fx:id="normal" mnemonicParsing="false" onAction="#onNewGameButtonClick" text="Normal" />
+                <MenuItem fx:id="arcade" mnemonicParsing="false" onAction="#onNewGameButtonClick" text="Arcade" />
+              </items>
+            </MenuButton>
+            <Label layoutY="4.0" text="Start a new game" />
+         </children>
+      </Group>
+      <Group layoutX="182.0" layoutY="124.0">
+         <children>
+            <Button layoutX="130.0" mnemonicParsing="false" onAction="#onProfileButtonClick" prefHeight="25.0" prefWidth="78.0" text="Profile" />
+            <Label layoutY="4.0" text="View your profile" />
+         </children>
+      </Group>
+      <Group layoutX="182.0" layoutY="200.0">
+         <children>
+            <Button layoutX="130.0" mnemonicParsing="false" onAction="#onLeaderboardButtonClick" prefHeight="25.0" prefWidth="100.0" text="Leaderboard" />
+            <Label layoutY="4.0" text="View leaderboard" />
+         </children>
+      </Group>
+   </children>
+</AnchorPane>
