--- a/src/main/resources/com/groupthree/mancala/start-screen-view.fxml
+++ b/src/main/resources/com/groupthree/mancala/start-screen-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.groupthree.mancala.WelcomeTwoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.groupthree.mancala.WelcomeController">
    <children>
       <Label alignment="CENTER" layoutX="225.0" layoutY="35.0" prefHeight="53.0" prefWidth="150.0" text="Mancala" textAlignment="CENTER">
          <font>
