--- a/src/main/resources/com/groupthree/mancala/player-profile-view.fxml
+++ b/src/main/resources/com/groupthree/mancala/player-profile-view.fxml
@@ -1,107 +1,118 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<HBox prefHeight="600" prefWidth="600" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.groupthree.mancala.PlayerProfileController">
-   <children>
-      <VBox alignment="TOP_CENTER" prefHeight="600" prefWidth="280" stylesheets="@style.css" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
-         <children>
-            <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@pholder.jpg" />
-               </image>
-               <VBox.margin>
-                  <Insets top="32.0" />
-               </VBox.margin>
-            </ImageView>
-            <Text fx:id="username" text="WhiteGhandalf" textAlignment="CENTER">
-               <font>
-                  <Font name="JetBrains Mono Medium Italic" size="12.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="6.0" />
-               </VBox.margin>
-            </Text>
-            <Text text="No of game played" textAlignment="CENTER">
-               <font>
-                  <Font name="JetBrains Mono Medium Italic" size="15.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="62.0" />
-               </VBox.margin></Text>
-            <Text fx:id="noOfGames" fontSmoothingType="LCD" text="580" textAlignment="CENTER">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <font>
-                  <Font name="JetBrains Mono Light" size="12.0" />
-               </font></Text>
-            <Text fontSmoothingType="LCD" layoutX="139.0" layoutY="275.0" text="Win Percentage" textAlignment="CENTER">
-               <VBox.margin>
-                  <Insets top="70.0" />
-               </VBox.margin>
-               <font>
-                  <Font name="JetBrains Mono Medium Italic" size="15.0" />
-               </font>
-            </Text>
-            <Text fx:id="winPercentage" fontSmoothingType="LCD" layoutX="107.0" layoutY="291.0" text="10%" textAlignment="CENTER">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <font>
-                  <Font name="JetBrains Mono Light" size="12.0" />
-               </font>
-            </Text>
-         </children>
-         <HBox.margin>
-            <Insets right="20.0" />
-         </HBox.margin>
-      </VBox>
+<AnchorPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.groupthree.mancala.PlayerProfileController">
+    <children>
+        <Button fx:id="back" layoutX="17.0" layoutY="12.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
 
-      <VBox fx:id="profileRight" alignment="TOP_CENTER" prefHeight="600" prefWidth="280">
-         <children>
-            <HBox>
-               <Region HBox.hgrow="ALWAYS" />
-               <Text text="Last Login: ">
-                  <HBox.margin>
-                     <Insets right="2.0" />
-                  </HBox.margin>
-                  <font>
-                     <Font name="JetBrains Mono Medium Italic" size="13.0" />
-                  </font></Text>
-               <Text layoutX="234.0" layoutY="23.0" text="12/03/2023">
-                  <HBox.margin>
-                     <Insets right="12.0" />
-                  </HBox.margin>
-                  <font>
-                     <Font name="JetBrains Mono Medium Italic" size="13.0" />
-                  </font>
-               </Text>
-               <VBox.margin>
-                  <Insets top="12.0" />
-               </VBox.margin>
-            </HBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Favourite Players">
-               <font>
-                  <Font name="PT Mono Bold" size="18.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="80.0" />
-               </VBox.margin>
-            </Text>
-            <ListView prefHeight="443.0" prefWidth="280.0" />
-         </children>
-         <HBox.margin>
-            <Insets left="20.0" />
-         </HBox.margin>
-      </VBox>
-   </children>
-</HBox>
+        <HBox layoutY="45.0" prefHeight="555.0" prefWidth="600">
+            <children>
+                <VBox alignment="TOP_CENTER" prefHeight="600" prefWidth="280" stylesheets="@style.css" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+                    <children>
+                        <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@pholder.jpg" />
+                            </image>
+                            <VBox.margin>
+                                <Insets top="32.0" />
+                            </VBox.margin>
+                        </ImageView>
+                        <Text fx:id="username" text="WhiteGhandalf" textAlignment="CENTER">
+                            <font>
+                                <Font name="JetBrains Mono Medium Italic" size="12.0" />
+                            </font>
+                            <VBox.margin>
+                                <Insets top="6.0" />
+                            </VBox.margin>
+                        </Text>
+                        <Text text="No of game played" textAlignment="CENTER">
+                            <font>
+                                <Font name="JetBrains Mono Medium Italic" size="15.0" />
+                            </font>
+                            <VBox.margin>
+                                <Insets top="62.0" />
+                            </VBox.margin>
+                        </Text>
+                        <Text fx:id="noOfGames" fontSmoothingType="LCD" text="580" textAlignment="CENTER">
+                            <VBox.margin>
+                                <Insets />
+                            </VBox.margin>
+                            <font>
+                                <Font name="JetBrains Mono Light" size="12.0" />
+                            </font>
+                        </Text>
+                        <Text fontSmoothingType="LCD" layoutX="139.0" layoutY="275.0" text="Win Percentage" textAlignment="CENTER">
+                            <VBox.margin>
+                                <Insets top="70.0" />
+                            </VBox.margin>
+                            <font>
+                                <Font name="JetBrains Mono Medium Italic" size="15.0" />
+                            </font>
+                        </Text>
+                        <Text fx:id="winPercentage" fontSmoothingType="LCD" layoutX="107.0" layoutY="291.0" text="10%" textAlignment="CENTER">
+                            <VBox.margin>
+                                <Insets />
+                            </VBox.margin>
+                            <font>
+                                <Font name="JetBrains Mono Light" size="12.0" />
+                            </font>
+                        </Text>
+                    </children>
+                    <HBox.margin>
+                        <Insets right="20.0" />
+                    </HBox.margin>
+                </VBox>
+
+                <VBox fx:id="profileRight" alignment="TOP_CENTER" prefHeight="600" prefWidth="280">
+                    <children>
+                        <HBox>
+                            <Region HBox.hgrow="ALWAYS" />
+                            <Text text="Last Login: ">
+                                <HBox.margin>
+                                    <Insets right="2.0" />
+                                </HBox.margin>
+                                <font>
+                                    <Font name="JetBrains Mono Medium Italic" size="13.0" />
+                                </font>
+                            </Text>
+                            <Text layoutX="234.0" layoutY="23.0" text="12/03/2023">
+                                <HBox.margin>
+                                    <Insets right="12.0" />
+                                </HBox.margin>
+                                <font>
+                                    <Font name="JetBrains Mono Medium Italic" size="13.0" />
+                                </font>
+                            </Text>
+                            <VBox.margin>
+                                <Insets top="12.0" />
+                            </VBox.margin>
+                        </HBox>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Favourite Players">
+                            <font>
+                                <Font name="PT Mono Bold" size="18.0" />
+                            </font>
+                            <VBox.margin>
+                                <Insets top="80.0" />
+                            </VBox.margin>
+                        </Text>
+                        <ListView prefHeight="443.0" prefWidth="280.0" />
+                    </children>
+                    <HBox.margin>
+                        <Insets left="20.0" />
+                    </HBox.margin>
+                </VBox>
+            </children>
+        </HBox>
+    </children>
+</AnchorPane>
