--- a/src/main/resources/com/groupthree/mancala/game-view.fxml
+++ b/src/main/resources/com/groupthree/mancala/game-view.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Circle?>
@@ -8,24 +10,60 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="773.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.groupthree.mancala.GameController">
    <children>
-      <Circle fx:id="row1Hole1" fill="DODGERBLUE" layoutX="160.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fx:id="row1Hole2" fill="DODGERBLUE" layoutX="248.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fx:id="row1Hole3" fill="DODGERBLUE" layoutX="336.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fx:id="row1Hole4" fill="DODGERBLUE" layoutX="426.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fx:id="row1Hole5" fill="DODGERBLUE" layoutX="520.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fx:id="row1Hole6" fill="DODGERBLUE" layoutX="613.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle fx:id="row1Hole1" fill="#4f7496" layoutX="160.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
+      <Circle fx:id="row1Hole2" fill="#4f7496" layoutX="248.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
+      <Circle fx:id="row1Hole3" fill="#4f7496" layoutX="336.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
+      <Circle fx:id="row1Hole4" fill="#4f7496" layoutX="426.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
+      <Circle fx:id="row1Hole5" fill="#4f7496" layoutX="520.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
+      <Circle fx:id="row1Hole6" fill="#4f7496" layoutX="613.0" layoutY="147.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
       <Label fx:id="row1hole1Value" alignment="CENTER" layoutX="146.0" layoutY="139.0" text="Label" />
       <Label fx:id="row1hole2Value" alignment="CENTER" layoutX="234.0" layoutY="139.0" text="Label" />
       <Label fx:id="row1hole3Value" alignment="CENTER" layoutX="322.0" layoutY="139.0" text="Label" />
       <Label fx:id="row1hole4Value" alignment="CENTER" layoutX="412.0" layoutY="139.0" text="Label" />
       <Label fx:id="row1hole5Value" alignment="CENTER" layoutX="506.0" layoutY="139.0" text="Label" />
       <Label fx:id="row1hole6Value" alignment="CENTER" layoutX="599.0" layoutY="139.0" text="Label" />
-      <Circle fx:id="row2Hole1" fill="DODGERBLUE" layoutX="160.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fx:id="row2Hole2" fill="DODGERBLUE" layoutX="248.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fx:id="row2Hole3" fill="DODGERBLUE" layoutX="336.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fx:id="row2Hole4" fill="DODGERBLUE" layoutX="426.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fx:id="row2Hole5" fill="DODGERBLUE" layoutX="520.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fx:id="row2Hole6" fill="DODGERBLUE" layoutX="613.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle fx:id="row2Hole1" fill="#4f7496" layoutX="160.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
+      <Circle fx:id="row2Hole2" fill="#4f7496" layoutX="248.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
+      <Circle fx:id="row2Hole3" fill="#4f7496" layoutX="336.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
+      <Circle fx:id="row2Hole4" fill="#4f7496" layoutX="426.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
+      <Circle fx:id="row2Hole5" fill="#4f7496" layoutX="520.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
+      <Circle fx:id="row2Hole6" fill="#4f7496" layoutX="613.0" layoutY="254.0" onMouseClicked="#moveMade" radius="40.0" stroke="BLACK" strokeType="INSIDE">
+         <cursor>
+            <Cursor fx:constant="OPEN_HAND" />
+         </cursor></Circle>
       <Label fx:id="row2hole1Value" alignment="CENTER" layoutX="146.0" layoutY="246.0" text="Label" />
       <Label fx:id="row2hole2Value" alignment="CENTER" layoutX="234.0" layoutY="246.0" text="Label" />
       <Label fx:id="row2hole3Value" alignment="CENTER" layoutX="322.0" layoutY="246.0" text="Label" />
@@ -42,9 +80,10 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Rectangle fx:id="playerOneStore" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" layoutX="8.0" layoutY="100.0" stroke="BLACK" strokeType="INSIDE" width="80.0" />
-      <Rectangle fx:id="payerTwoStore" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" layoutX="673.0" layoutY="100.0" stroke="BLACK" strokeType="INSIDE" width="80.0" />
+      <Rectangle fx:id="playerOneStore" arcHeight="5.0" arcWidth="5.0" fill="#4f7496" height="200.0" layoutX="8.0" layoutY="100.0" stroke="BLACK" strokeType="INSIDE" width="80.0" />
+      <Rectangle fx:id="payerTwoStore" arcHeight="5.0" arcWidth="5.0" fill="#4f7496" height="200.0" layoutX="673.0" layoutY="100.0" stroke="BLACK" strokeType="INSIDE" width="80.0" />
       <Label fx:id="playerOneStoreValue" layoutX="34.0" layoutY="179.0" text="Label" />
       <Label fx:id="playerTwoStoreValue" layoutX="699.0" layoutY="179.0" text="Label" />
+      <Button fx:id="endGame" layoutX="341.0" layoutY="22.0" mnemonicParsing="false" text="End Game" />
    </children>
 </AnchorPane>
