continue turn powerup impl

--- a/src/main/resources/com/groupthree/mancala/game-view.fxml
+++ b/src/main/resources/com/groupthree/mancala/game-view.fxml
@@ -85,9 +85,9 @@
       <Label fx:id="playerOneStoreValue" layoutX="34.0" layoutY="179.0" text="Label" />
       <Label fx:id="playerTwoStoreValue" layoutX="699.0" layoutY="179.0" text="Label" />
       <Button fx:id="endGame" layoutX="362.0" layoutY="22.0" mnemonicParsing="false" text="End Game" />
-      <Button fx:id="playerTwoCTPowerUp" layoutX="146.0" layoutY="347.0" mnemonicParsing="false" text="Power up: Continue Turn" />
+      <Button fx:id="playerTwoCTPowerUp" layoutX="146.0" layoutY="347.0" mnemonicParsing="false" onAction="#playerTwoContinueTurn" text="Power up: Continue Turn" />
       <Button fx:id="playerTwoDPPowerUp" layoutX="500.0" layoutY="347.0" mnemonicParsing="false" onAction="#playerTwoDoublePoints" text="Power up: Double Points" />
-      <Button fx:id="playerOneCTPowerUp" layoutX="146.0" layoutY="22.0" mnemonicParsing="false" text="Power up: Continue Turn" />
+      <Button fx:id="playerOneCTPowerUp" layoutX="146.0" layoutY="22.0" mnemonicParsing="false" onAction="#playerOneContinueTurn" text="Power up: Continue Turn" />
       <Button fx:id="playerOneDPPowerUp" layoutX="500.0" layoutY="22.0" mnemonicParsing="false" onAction="#playerOneDoublePoints" text="Power up: Double Points" />
    </children>
 </AnchorPane>
