--- a/src/main/resources/com/groupthree/mancala/admin-stats-view.fxml
+++ b/src/main/resources/com/groupthree/mancala/admin-stats-view.fxml
@@ -1,14 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.groupthree.mancala.AdminStatsView"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="557.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.groupthree.mancala.StatViewController">
+   <children>
+      <Label fx:id="halfHand" layoutX="180.0" layoutY="110.0" text="Half Hand :" />
+      <Label layoutX="219.0" layoutY="37.0" text="Game Statistics">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Separator layoutX="200.0" layoutY="216.0" prefWidth="200.0" />
+      <Label layoutX="224.0" layoutY="81.0" text="Special Stone Frequency">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Separator layoutX="200.0" layoutY="70.0" prefWidth="200.0" />
+      <Label fx:id="reverseTurn" layoutX="180.0" layoutY="136.0" text="Reverse Turn :" />
+      <Label fx:id="switchSides" layoutX="180.0" layoutY="161.0" text="Switch Sides :" />
+      <Label layoutX="235.0" layoutY="228.0" text="Power Up Frequency">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="continueTurn" layoutX="175.0" layoutY="254.0" text="Continue Turn :" />
+      <Label fx:id="doublePoints" layoutX="175.0" layoutY="279.0" text="Double Points :" />
+      <Separator layoutX="200.0" layoutY="338.0" prefWidth="200.0" />
+      <Label layoutX="221.0" layoutY="348.0" text="Most Recent Sign ins">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="username1" layoutX="272.0" layoutY="385.0" />
+      <Label fx:id="username2" layoutX="272.0" layoutY="410.0" />
+      <Label fx:id="username3" layoutX="273.0" layoutY="434.0" />
+      <Label fx:id="username4" layoutX="273.0" layoutY="459.0" />
+      <Label fx:id="username5" layoutX="272.0" layoutY="483.0" />
+      <Button fx:id="back" layoutX="27.0" layoutY="25.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
+   </children>
 </AnchorPane>
